# apsl

./: .gitignore  AGENTS.md  Cargo.toml  README.md  apsl.apsl  ouroboros.apsl
crates/apsl/: Cargo.toml
crates/apsl-artifact/: Cargo.toml
crates/apsl-artifact/src/: lib.rs
crates/apsl-artifact/tests/: golden.rs  validation.rs
crates/apsl-artifact/tests/fixtures/: compiled-graph-types-v1.apsl  compiled-graph-types-v1.canon.json  compiled-graph-types-v1.sha256
crates/apsl-cert/: Cargo.toml
crates/apsl-cert-cli/: Cargo.toml
crates/apsl-cert-cli/src/: main.rs
crates/apsl-cert/src/: cert.rs  key.rs  lib.rs  store.rs  tcb.rs
crates/apsl-complex/: Cargo.toml
crates/apsl-complex/src/: algebra.rs  derive.rs  hints.rs  lib.rs
crates/apsl-core/: Cargo.toml
crates/apsl-core/src/: ast.rs  canon.rs  hash.rs  lib.rs
crates/apsl-link/: Cargo.toml
crates/apsl-link/src/: extract.rs  lib.rs  resolve.rs  search.rs
crates/apsl-lint/: Cargo.toml
crates/apsl-lint/src/: main.rs
crates/apsl-parse/: Cargo.toml
crates/apsl-parse/src/: lex.rs  lib.rs  parse.rs
crates/apsl-runtime/: Cargo.toml
crates/apsl-runtime/src/: adapter.rs  engine.rs  lib.rs  manifest.rs  proof.rs
crates/apsl-smt/: Cargo.toml
crates/apsl-smt/src/: discharge.rs  encode.rs  explain.rs  lib.rs  solver.rs
crates/apsl-types/: Cargo.toml
crates/apsl-types/src/: env.rs  infer.rs  lib.rs  string_strict.rs  types.rs
crates/apsl-types/tests/: state_placement.rs
crates/apsl-verify/: Cargo.toml
crates/apsl-verify/src/: lib.rs  node.rs
crates/apsl-workbench/: Cargo.toml
crates/apsl-workbench/src/: handlers.rs  lib.rs  main.rs  nix.rs  pipeline.rs  resolve.rs
crates/apsl-workbench/tests/: routes.rs
crates/apsl/src/: main.rs
crates/apslc/: Cargo.toml
crates/apslc/src/: main.rs
crates/apslc/src/attest/: common.rs  html.rs  js.rs  json.rs  mod.rs  python.rs  rust.rs  shell.rs  toml.rs  yaml.rs
crates/apslc/tests/: artifact.rs  string_strict.rs
examples/: bad_n_squared.apsl  dedupe.apsl  world_threading.apsl
proofs/: axioms-algebra.apsl  axioms-analysis.apsl  axioms-ift.apsl  cofactor-chain.apsl  decomp-bound-assembly.apsl  decomp-cofactor-ab.apsl  decomp-cofactor-cd.apsl  decomp-cofactor-ef.apsl  decomp-critical-node.apsl  decomp-discriminant.apsl  decomp-false-node.apsl  decomp-rigidity.apsl  decomp-round4a.apsl  decomp-round4b.apsl  principia-computia.apsl  proof-n17-full.apsl  section-mechanized-verification.md  soundness-phase-bound.apsl  spectral-rigidity.apsl
scripts/: verify-apsl.sh
tests/nominal/: fail_type_confusion.apsl  pass_distinct_types.apsl
tests/restricted/: fail_widening.apsl  pass_narrowing.apsl
