[package]
name = "apsl-artifact"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
apsl-core.workspace = true
apsl-types.workspace = true

[dev-dependencies]
apsl-parse.workspace = true
serde_json.workspace = true
