[package]
name = "apsl-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
apsl-core.workspace = true
apsl-parse = { path = "../apsl-parse" }
apsl-types = { path = "../apsl-types" }
apsl-link  = { path = "../apsl-link" }

serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
