[package]
name = "apsl-workbench"
version.workspace = true
edition.workspace = true

[[bin]]
name = "apsl-workbench"
path = "src/main.rs"

[dependencies]
apsl-core.workspace = true
apsl-parse.workspace = true
apsl-types.workspace = true
apsl-complex.workspace = true
apsl-smt.workspace = true
apsl-cert.workspace = true
apsl-verify = { path = "../apsl-verify" }

ed25519-dalek.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true

axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.5", features = ["util"] }
rand_core.workspace = true
