[package]
name = "apslc"
version.workspace = true
edition.workspace = true

[[bin]]
name = "apslc"
path = "src/main.rs"

[dependencies]
apsl-core.workspace = true
apsl-parse.workspace = true
apsl-types.workspace = true
apsl-link.workspace = true
apsl-artifact.workspace = true

[dev-dependencies]
serde_json.workspace = true
